##############################################################################
#   FALCON - The Falcon Programming Language
#   FILE: src/CMakeLists.txt
#
#   Main core Falcon CMAKE lists
#   -------------------------------------------------------------------
#   Author: Giancarlo Niccolai
#   Begin : Tue, 09 Jan 2018 14:39:31 +0000
#   Touch : Tue, 09 Jan 2018 15:30:48 +0000
#
#   -------------------------------------------------------------------
#   (C) Copyright 2018 The Falcon Programming Language
#   Released under Apache 2.0 License.
##############################################################################

add_subdirectory(fut)
add_subdirectory(test)

# end of CMakeLists.txt

