##############################################################################
#   FALCON - The Falcon Programming Language
#   FILE: src/test/CMakeLists.txt
#
#   Falcon Unit Tests CMAKE lists
#   -------------------------------------------------------------------
#   Author: Giancarlo Niccolai
#   Begin : Tue, 09 Jan 2018 14:41:57 +0000
#   Touch : Sun, 17 Feb 2019 14:17:31 +0000
#
#   -------------------------------------------------------------------
#   (C) Copyright 2018 The Falcon Programming Language
#   Released under Apache 2.0 License.
##############################################################################

add_subdirectory(fut)
add_subdirectory(engine)

# end of CMakeLists.txt

